<resources>
    <string name="app_name">Loops</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="firstname">ชื่อนักเรียน</string>
    <string name="lastname">นามสกุลนักเรียน</string>
    <string name="loginbutton">เข้าสู่ระบบ</string>
    <string name="studentclass">ชั้นเรียน</string>
    <string name="cornfirmInfo">ยืนยันข้อมูล</string>
    <string name="SelectParent">ยืนยันตัวตนผุ้ปกครอง</string>
    <string name="name_and_lastname">ชื่อ นามสกุล</string>
    <string name="phonenumber">เบอร์โทรศัพท์มือถือ</string>
    <string name="StatusParent">สถานะ</string>
    <string name="confirmOTP">ยืนยันรหัส</string>
    <string name="confirm">ยืนยัน</string>
    <string name="btn_yes">ใช่</string>
    <string name="btn_no">ไม่ใช่</string>
    <string name="btn_info_dialog_close">ปิด</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event">กำหนดการ</string>
</resources>
