<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/loginbg"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.theliitlepony.loops.activitys.LoginActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:paddingBottom="40dp"
        android:layout_gravity="center"
        android:background="@drawable/login_frame_layout"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:hint="@string/firstname"/>
        <android.support.design.widget.TextInputEditText
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:hint="@string/lastname"
            />
        <Button
            android:layout_marginTop="140dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:text="@string/loginbutton"
            android:textSize="20sp"

            />
    </FrameLayout>
</RelativeLayout>
