<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginTop="2dp"
    cardview:cardCornerRadius="1dp"
    cardview:cardElevation="2dp"
    cardview:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <FrameLayout
            android:id="@+id/item_bg"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <ImageView
                    android:id="@+id/picture_profile"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="80dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/picture_profile"
                    android:maxLines="1"
                    android:text="@string/name_and_lastname"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name"
                    android:layout_marginEnd="80dp"
                    android:layout_toRightOf="@+id/picture_profile"
                    android:text="@string/phonenumber"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/statusParent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tel"
                    android:layout_marginEnd="80dp"
                    android:layout_toRightOf="@+id/picture_profile"
                    android:text="@string/StatusParent"
                    android:textSize="14sp"
                    android:layout_marginBottom="5dp"/>

            </RelativeLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/nextPageBtn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignRight="@+id/item_bg">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/next_page" />

        </FrameLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>
